Add shadowjar for building jars with dependencies