@@ -1,4 +1,5 @@
 plugins {
+    id 'com.github.johnrengelman.shadow' version '7.1.0'
     id 'java'
 }
 
@@ -18,23 +19,11 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 
+    // implementation 'org.xerial:sqlite-jdbc:3.36.0.2'
     implementation 'net.dv8tion:JDA:4.3.0_346'
-    implementation 'org.xerial:sqlite-jdbc:3.36.0.2'
     implementation 'com.googlecode.json-simple:json-simple:1.1.1'
     implementation 'org.jsoup:jsoup:1.14.3'
     implementation 'org.mariadb.jdbc:mariadb-java-client:2.1.2'
-}
-
-tasks.withType(JavaCompile) {
-    options.compilerArgs += "--enable-preview"
-}
-
-tasks.withType(Test) {
-    jvmArgs += "--enable-preview"
-}
-
-tasks.withType(JavaExec) {
-    jvmArgs += '--enable-preview'
 }
 
 test {
@@ -47,7 +36,6 @@ jar {
     manifest {
         attributes("Main-Class": "main.zGPB")
     }
-    duplicatesStrategy = DuplicatesStrategy.INCLUDE
 
     from {
         (configurations.compileClasspath.findAll { !it.path.endsWith(".pom") }).collect {
